--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Heidorn & Andriy Massimilla",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "socket.io": "^2.0.1"
   }
 }
