--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --ignore public index.js"
   },
-  "author": "Daniel Heidorn & Andriy Massimilla",
+  "author": "Daniel Heidorn",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
