--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "express": "^4.15.3",
     "socket.io": "^2.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "nodemon": "^1.11.0"
   }
 }
