--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
-    "socket.io": "^2.0.1"
+    "js-cookie": "^2.1.4",
+    "socket.io": "^2.0.1",
+    "spectrum-colorpicker": "^1.8.0"
   }
 }
