--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Yees",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --ignore public index.js"
+    "start": "npm i && nodemon --ignore public index.js"
   },
   "author": "Daniel Heidorn & Andriy Massimilla",
   "license": "ISC",
